--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
-# Settings specified in this file will override any Gradle settings
-# configured through the IDE.
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
 
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
@@ -15,9 +15,4 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=tru
-#e
-
-ANDROID_BUILD_TARGET_SDK_VERSION=19
-ANDROID_BUILD_TOOLS_VERSION=19.1.0
-ANDROID_BUILD_SDK_VERSION=19
+# org.gradle.parallel=true
