--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:label="@string/title_activity_club_details">
         </activity>
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:name=".activities.ClubDataActivity"
             android:label="@string/title_activity_club_details">
         </activity>
