--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,14 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+
     defaultConfig {
         applicationId "com.yknx.apps.attendancecontrol"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        useJack = false
     }
     buildTypes {
         release {
